[package]
name = "ghono-xmr-randomx"
version = "0.1.0"
authors = [""]
license = "MIT/Apache-2.0"
edition = "2018"
description = "RandomX miner for Monero"
repository = "https://github.com/kazcw/powhasher"

[dependencies]
byteorder = "1.3.4"
core_affinity = "0.5.10"
serde = "1.0.117"
serde_derive = "1.0.117"
toml = "0.5.7"
env_logger = "0.8.1"
log = "0.4.11"
clap = "2"
randomx-rs = { path = "./randomx-rs" }
cn-stratum = { path = "./cn-stratum-master" }
hex = "0.4.2"
libc = "*"

[profile.release]
panic = "abort"
lto = true
